update videos api
