# app/Models/Video.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Video extends Model
+{
+    use HasFactory;
+
+    protected $table = "videos";
+    protected $fillable = [
+        'title',
+        'url',
+        'description',
+    ];
+}
