# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\ImageController;
+use App\Http\Controllers\VideoController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -22,3 +23,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::get('/images',[ImageController::class,'getImage']);
 Route::post('/uploadImageApi',[ImageController::class,'uploadImageApi']);
 Route::post('/uploadImageDF',[ImageController::class,'uploadImageDF']);
+Route::post('/upload-videos',[VideoController::class,'uploadVideosApi']);
